--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             color:green;
         }
         p{
-            color:green;
+            color:blue;
         }
     </style>
 </head>
