--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Index</title>
     <style>
         h1{
-            color:green;
+            color:blue;
         }
         p{
             color:blue;
