--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>LAGUNAK</h1>
-    <p>gjbfhnagiuewhhjugabdinaajnha n nbndkbn </p>
+    <p>gjbfhnagiuewhhjugabdinaajnha n  </p>
 </body>
 </html>
